# SySeBa

./: .gitattributes  .gitignore  CHANGELOG.it.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.it.md  README.md  ReadmeAI.en.md  ReadmeAI.md  THIRD_PARTY_NOTICES.it.md  THIRD_PARTY_NOTICES.md  requirements.txt  syseba-maintenance.sh  syseba.conf  syseba.lang  syseba.py  syseba_web.js
.github/workflows/: publish-packages.yml
cmake/: EmbedAssets.cmake
cmake/toolchains/: mingw-w64-x86_64.cmake  zig-linux-x86_64-glibc217.cmake  zig-macos-arm64.cmake  zig-macos-x86_64.cmake
docs/: API.it.md  API.md  ARCHITECTURE.it.md  ARCHITECTURE.md  BUILD.it.md  BUILD.md  MIGRATION.it.md  MIGRATION.md  OPERATIONS.it.md  OPERATIONS.md  PACKAGING.it.md  PACKAGING.md  README.it.md  README.md  SECURITY.it.md  SECURITY.md  TESTING.it.md  TESTING.md
docs/releases/: v1.0.0-python.it.md  v1.0.0-python.md  v2.0.0.it.md  v2.0.0.md
include/syseba/: syseba.h
packaging/debian/: conffiles  postinst  preinst  prerm
packaging/linux/: syseba.conf  syseba.service
packaging/macos/: com.okno.syseba.plist  install.sh  syseba.conf  uninstall.sh
packaging/oci/: Dockerfile.packages
packaging/rpm/: postinstall.sh  postuninstall.sh  preuninstall.sh
packaging/windows/: install-service.ps1  syseba.conf  syseba.manifest  syseba.rc  uninstall-service.ps1
scripts/: build-release.ps1  build-release.sh  make_universal_macho.py  migrate-from-python.sh  rename_hfs_label.py  syseba-maintenance.sh
src/: app.c  cli.c  config.c  dashboard.c  database.c  fs.c  log.c  main.c  platform.c  queue.c  service_linux.c  service_macos.c  service_windows.c  syseba_internal.h  watcher.c  watcher_linux.c  watcher_poll.c  watcher_windows.c  web.c
tests/: test_syseba.py
tests_c/: integration_linux.sh  integration_windows.ps1  maintenance_integration.sh  test_native.c
web/: index.html
